[package]
name = "lightweight_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
tokenizers = { version = "0.15.2", features = ["http"] }
colored = "2.1.0"
serde = "1.0.197"
serde_json = "1.0.114"
rand = "0.8.4"
futures = "0.3"
rand_distr = "0.4.3"